[project]
name = "bili-gachi"
version = "0.1.0"
description = ""
authors = [
    {name = "狐日泽",email = "shdocter@nya-wsl.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "nicegui (>=2.21.1,<3.0.0)",
    "qrcode[pil] (>=8.2,<9.0)",
    "requests (>=2.32.4,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.ustc.edu.cn/pypi/simple/"
priority = "primary"