[project]
name = "bili-gachi"
version = "0.1.0"
description = ""
authors = [{ name = "狐日泽", email = "shdocter@nya-wsl.com" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "nicegui (>=2.21.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pillow>=11.3.0",
    "qrcode>=8.2",
]

[[tool.uv.index]]
name = "mirrors"
url = "https://mirrors.ustc.edu.cn/pypi/simple/"
default = true
